feat: Implement PDF preview with react-pdf to bypass S3 download headers

--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
+    "pdfjs-dist": "^5.4.624",
     "pg": "^8.18.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-pdf": "^10.3.0",
     "react-router-dom": "^7.13.0",
     "three": "^0.182.0"
   },
