--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^9.5.0",
     "@supabase/supabase-js": "^2.93.3",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.4",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
     "pdfjs-dist": "^5.4.624",
